--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- Custom style  -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Header -->
@@ -30,12 +31,10 @@
           >
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-link">Студия</a>
+              <a href="./index.html" class="header__nav-link header__nav-link--active">Студия</a>
             </li>
             <li class="header__nav-item">
-              <a href="./portfolio.html" class="header__nav-link header__nav-link--active"
-                >Портфолио</a
-              >
+              <a href="./portfolio.html" class="header__nav-link">Портфолио</a>
             </li>
             <li class="header__nav-item"><a href="" class="header__nav-link">Контакты</a></li>
           </ul>
@@ -62,7 +61,7 @@
     </header>
     <!-- Мейн -->
     <main>
-      <section class="page-section">
+      <section class="section">
         <div class="conteiner">
           <!-- Навигация карточек -->
           <h1 class="visibility-hidden">Портфолио</h1>
