--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- Custom style  -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Header -->
@@ -190,7 +191,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="work">
+      <section class="work section">
         <div class="conteiner">
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
@@ -210,7 +211,7 @@
         </div>
       </section>
       <!-- Наша команда -->
-      <section class="team">
+      <section class="team section">
         <div class="conteiner">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -366,7 +367,7 @@
         </div>
       </section>
       <!-- Постоянные клиенты -->
-      <section class="clients">
+      <section class="clients section">
         <div class="conteiner">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__box">
