--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize  -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -72,7 +73,13 @@
               <label class="modal__form-field">
                 <span class="modal__form-label">Имя</span>
                 <span class="modal__box-input">
-                  <input class="modal__form-input" type="text" name="client-name" placeholder=" " />
+                  <input
+                    class="modal__form-input"
+                    type="text"
+                    name="client-name"
+                    required
+                    placeholder=" "
+                  />
                   <svg class="modal__form-icon" width="18" height="18">
                     <use href="./images/baground/sprite-icons.svg#person-black"></use>
                   </svg>
@@ -85,6 +92,7 @@
                     class="modal__form-input"
                     type="text"
                     name="client-phone"
+                    required
                     placeholder=" "
                   />
                   <svg class="modal__form-icon" width="18" height="18">
@@ -99,6 +107,7 @@
                     class="modal__form-input"
                     type="text"
                     name="client-email"
+                    required
                     placeholder=" "
                   />
                   <svg class="modal__form-icon" width="18" height="18">
@@ -116,7 +125,13 @@
               </label>
               <label class="modal__form-checkbox">
                 <span class="modal__checkbox-conteiner">
-                  <input class="modal__checkbox" type="checkbox" name="agreement" value="accept" />
+                  <input
+                    class="modal__checkbox"
+                    type="checkbox"
+                    name="agreement"
+                    value="accept"
+                    required
+                  />
                   <svg class="modal__checkbox-icon" width="16" height="15">
                     <use href="./images/baground/sprite-icons.svg#check-1"></use>
                   </svg>
@@ -479,6 +494,7 @@
                 class="footer__subscription-mail"
                 type="email"
                 name="subscription"
+                required
                 placeholder="E-mail"
               />
             </label>
