--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,12 @@
           >
           <ul class="header__nav-list">
             <li class="header__nav-item">
-              <a href="./index.html" class="header__nav-link header__nav-link--active">Студия</a>
+              <a href="./index.html" class="header__nav-link">Студия</a>
             </li>
             <li class="header__nav-item">
-              <a href="./portfolio.html" class="header__nav-link">Портфолио</a>
+              <a href="./portfolio.html" class="header__nav-link header__nav-link--active"
+                >Портфолио</a
+              >
             </li>
             <li class="header__nav-item"><a href="" class="header__nav-link">Контакты</a></li>
           </ul>
@@ -312,6 +314,7 @@
                 class="footer__subscription-mail"
                 type="email"
                 name="subscription"
+                required
                 placeholder="E-mail"
               />
             </label>
