--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Main -->
     <main>
       <!-- Section Hero  -->
-      <section class="hero hero__overlay">
+      <section class="hero hero-overlay">
         <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
         <button class="button" type="button" data-modal-open>Заказать услугу</button>
         <div class="hero__backdrop hero__backdrop--is-hidden" data-modal>
@@ -235,7 +235,7 @@
               <div class="team__text-card">
                 <h3 class="team__name">Игорь Демьяненко</h3>
                 <p class="team__position">Product Designer</p>
-                <ul class="social__icon-box">
+                <ul class="social">
                   <li class="social__icon-item">
                     <a class="social__icon-link" href="">
                       <svg class="social__icon" width="20" height="20">
@@ -272,7 +272,7 @@
               <div class="team__text-card">
                 <h3 class="team__name">Ольга Репина</h3>
                 <p class="team__position">Frontend Developer</p>
-                <ul class="social__icon-box">
+                <ul class="social">
                   <li class="social__icon-item">
                     <a class="social__icon-link" href="">
                       <svg class="social__icon" width="20" height="20">
@@ -309,7 +309,7 @@
               <div class="team__text-card">
                 <h3 class="team__team-name">Николай Тарасов</h3>
                 <p class="team__team-position">Marketing</p>
-                <ul class="social__icon-box">
+                <ul class="social">
                   <li class="social__icon-item">
                     <a class="social__icon-link" href="">
                       <svg class="social__icon" width="20" height="20">
@@ -346,7 +346,7 @@
               <div class="team__text-card">
                 <h3 class="team__name">Михаил Ермаков</h3>
                 <p class="team__position">UI Designer</p>
-                <ul class="social__icon-box">
+                <ul class="social">
                   <li class="social__icon-item">
                     <a class="social__icon-link" href="">
                       <svg class="social__icon" width="20" height="20">
@@ -455,29 +455,29 @@
         </div>
         <div class="footer__social">
           <p class="footer__join">присоединяйтесь</p>
-          <ul class="social__icon-box">
-            <li class="social__icon-item footer__social-icon--color">
+          <ul class="social">
+            <li class="social__icon-item social__icon-item--footer-color">
               <a class="social__icon-link" href="">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/baground/sprite-icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social__icon-item footer__social-icon--color">
+            <li class="social__icon-item social__icon-item--footer-color">
               <a class="social__icon-link" href="">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/baground/sprite-icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social__icon-item footer__social-icon--color">
+            <li class="social__icon-item social__icon-item--footer-color">
               <a class="social__icon-link" href="">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/baground/sprite-icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social__icon-item footer__social-icon--color">
+            <li class="social__icon-item social__icon-item--footer-color">
               <a class="social__icon-link" href="">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/baground/sprite-icons.svg#linkedin"></use>
